# age-ui

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: publish.yml
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Greet.svelte  IdentityForm.svelte  Modal.svelte  Tab.svelte  TabList.svelte  Tabs.svelte  store.ts
src/screens/: Decrypt.svelte  Encrypt.svelte  Identities.svelte
